PAg-1 con texto y logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./style.css">
     <title>Replica Web</title>
 </head>
-<body>
+<header>
     <nav>
         <div class="logo-container"><a href=# class="logo">Replica Web</a></div>
         <ul>
@@ -21,20 +21,17 @@
         </ul>
         <div class="button-container"><a href=# class="button"><i class="bi bi-chat-text-fill"></i> Enviar Feedback</a></div>
     </nav>
+</header>
+<body>
     <section class="pag1-container">
         <div class="text-pag1-container">
-            <h1>¡Muéstranos tu talento programando!</h1>
-            <p>¡Esta es tu oportunidad para demostrarnos lo que has aprendido en la ruta de investigación y las masterclass!</p>
+            <h1 class="talento">¡Muéstranos tu talento programando!</h1>
+            <p class="oportunidad">¡Esta es tu oportunidad para demostrarnos lo que has aprendido en la ruta de investigación y las masterclass!</p>
         </div>
         <div class="media-pag1-containder">
-            <ul>
-                <li>Cruz</li>
-                <li>Móvil</li>
-                <li>círculo</li>
-            </ul>
+            <img src="./circulo.svg" class="circulo" width="500px">
 
         </div>
-
     </section>
     
     
