--- a/script.html
+++ b/script.html
@@ -12,17 +12,17 @@
     <link rel="stylesheet" href="./style.css">
     <title>Replica Web</title>
 </head>
-<header>
-    <nav>
-        <div class="logo-container"><a href=# class="logo">Replica Web</a></div>
-        <ul>
-            <li><a href="#herramientas" class="nav-item">Herramientas</a></li>
-            <li><a href=# class="nav-item">Descarga</a></li>
-        </ul>
-        <div class="button-container"><a href=https://factoriaf5.org/contacto/ class="button"><i class="bi bi-chat-text-fill"></i> Enviar Feedback</a></div>
-    </nav>
-</header>
 <body>
+    <header>
+        <nav>
+            <div class="logo-container"><a href=# class="logo">Replica Web</a></div>
+            <ul id="menu">
+                <li><a href="#herramientas" class="nav-item">Herramientas</a></li>
+                <li><a href=# class="nav-item">Descarga</a></li>
+            </ul>
+            <div class="button-container"><a href=https://factoriaf5.org/contacto/ class="button"><i class="bi bi-chat-text-fill"></i> Enviar Feedback</a></div>
+        </nav>
+    </header>
     <div>
         <section class="pag1-container">
             <div class="text-pag1-container">
@@ -31,7 +31,7 @@
             </div>
             <div class="media-pag1-container">
                 <div class="animacion-movil" width="1000px" height="1000px"></div>
-                <img src="./Group 1.png" class="circulo" width="450px">  
+                <img src="./img/Group 1.png" class="circulo" width="450px">  
             </div>
         </section>
     </div>
@@ -43,29 +43,29 @@
         <div class="pag-3-container" id="herramientas">
             <div class="movil-pg-3">
                 <div class="animacion-movil-2" width="1000px" height="1000px"></div>
-                <img src="./Group 3.png" width="450px" class="movil-pg3" tag="imagen de un móvil con animación de fondo">
+                <img src="./img/Group 3.png" width="450px" class="movil-pg3" tag="imagen de un móvil con animación de fondo">
             </div>
             <div class="contenedor-filas">
                 <div class="fila-1">
                     <div>
-                        <img src="./movil.png" class="pag-3-item1">
+                        <img src="./img/movil.png" class="pag-3-item1">
                         <h3>Hacer páginas responsive</h3>
                         <p class="parrafo-p3">Aprenderás a hacer páginas ajustables a los diferentes tamaños de los dispositivos.</p>
                     </div>
                     <div>
-                        <img src=./photo.png class="pag-3-item2">
+                        <img src=./img/photo.png class="pag-3-item2">
                         <h3>Frameworks</h3>
                         <p class="parrafo-p3">Aprenderás la finalidad de los frameworks y como utilizarlos.</p>
                     </div>
                 </div>
                 <div class="fila-2">
                     <div>
-                        <img src="regalo.png" class="pag-3-item3">
+                        <img src="./img/regalo.png" class="pag-3-item3">
                         <h3>Hacer animaciones</h3>
                         <p class="parrafo-p3">Aprenderás a hacer animaciones por medio de CSS</p>
                     </div>
                     <div>
-                        <img src="frontend.png" class="pag-3-item4">
+                        <img src="./img/frontend.png" class="pag-3-item4">
                         <h3>Front End</h3>
                         <p class="parrafo-p3">Y al final serás un gran desarrollador Front End!</p>
                     </div>
@@ -83,5 +83,6 @@
         </ul>
     </div>
 </footer>
+<script src="script.js"></script>
 </body>
 </html>
